# geo-explorer

./: .cruft.json  .gitattributes  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml
.poetry/cache/artifacts/03/3b/6d/1a83cd7d8bc41d4d17bc26d2938903786f4ca6c8416f1567f40b067089/: dash_leaflet-1.1.3-py3-none-any.whl
.poetry/cache/artifacts/09/7e/72/d4200e15dbf7674a73ea36b45425409c6d453a26077f46035971a32bd0/: sphinx_click-6.0.0-py3-none-any.whl
.poetry/cache/artifacts/0f/c7/07/4b7c219d5a7344694a790c31273bcbbd8e5f0a649b9793ae60de8fe7d6/: coverage-7.9.2-cp313-cp313-win_amd64.whl
.poetry/cache/artifacts/0f/d1/ff/4cbb2629685c2344ff59feb628373853105a33a2b0df437d7a0b875312/: darglint-1.8.1-py3-none-any.whl
.poetry/cache/artifacts/15/7d/99/66737515ddf5b2917cfb36172de1cc5d3c260194acdc5ee5e77b77ce26/: snowballstemmer-3.0.1-py3-none-any.whl
.poetry/cache/artifacts/18/52/1b/4ba97ab7e8d99036eb900ff408dcd42cebc5d9d2a8ed278eca17fa4221/: mapclassify-2.10.0-py3-none-any.whl
.poetry/cache/artifacts/1c/34/e1/0f75eed45faa331f5575315f850ad6eaa78e72124ee7660fee654924cf/: narwhals-1.47.0-py3-none-any.whl
.poetry/cache/artifacts/1d/db/d0/b33df45750840c91a3b30043797bc63cece7304d31b103a7f6c0aa7c36/: pandas_stubs-2.3.0.250703-py3-none-any.whl
.poetry/cache/artifacts/23/5c/a0/dd1b87beed1945e5a8438c3ac1774db4ffd6a3142a5624b151fa4765a4/: alabaster-1.0.0-py3-none-any.whl
.poetry/cache/artifacts/31/10/80/1f0a448cb55b70a3d7a01456c72229204de2a04c21f808bfe0a8aa61b5/: tornado-6.5.1-cp39-abi3-win_amd64.whl
.poetry/cache/artifacts/32/04/2a/2ee91a4b9363d87a98a09d8287ec09952c65299308e1acfd12bcf46d4b/: pyzmq-27.0.0-cp312-abi3-win_amd64.whl
.poetry/cache/artifacts/41/56/a0/e3eec784f53a861b1f3221c0131489cbb4fcce4ec00d0c4615916cc01b/: xyzservices-2025.4.0-py3-none-any.whl
.poetry/cache/artifacts/42/36/b8/3fa9b5c1cfd2177ecb4465bff61d032f9811a706ec9f11822c7d427237/: mapclassify-2.8.1-py3-none-any.whl
.poetry/cache/artifacts/42/57/27/13efb99f3f74a10ecc81556efdf3a76b3c6e424fb0d439134f05a85576/: myst_parser-4.0.1-py3-none-any.whl
.poetry/cache/artifacts/46/4b/f8/8fa9e9019f2abb88da74cb62bee1f546baf97285f9380fe1625860b5a2/: pre_commit_hooks-5.0.0-py2.py3-none-any.whl
.poetry/cache/artifacts/47/5c/8d/9088e7d7527aada62853539c81abc8ab26ff02c6d73dc1b5f3c4cc69fa/: protobuf-6.31.1-cp310-abi3-win_amd64.whl
.poetry/cache/artifacts/4b/8d/60/ba1aa998adba8a8973118e5b4552c7b8e8193f85d240b57c5941c16471/: pytest_cov-6.2.1-py3-none-any.whl
.poetry/cache/artifacts/4c/d5/71/f8643ed055b78392a94ec85a2a3adf2082a086fc1c7f69b517bd60f594/: pywinpty-2.0.15-cp313-cp313-win_amd64.whl
.poetry/cache/artifacts/4f/ed/bf/535ca232796ee5c92d4b5d9573cb69c1a76aaa1d8e47341aa3d21da24f/: sphinx_autodoc_typehints-3.0.1-py3-none-any.whl
.poetry/cache/artifacts/53/4d/d7/bcafd8e5a4867ab3dc7bb6ca77baf697759516d2ca0e1ac636bb75e29c/: sphinx_basic_ng-1.0.0b2-py3-none-any.whl
.poetry/cache/artifacts/54/cf/6a/da0baa05b74842f4dd6805eb8be2dae000ba585951f967ccc2dfde1b1b/: sphinx-8.2.3-py3-none-any.whl
.poetry/cache/artifacts/56/6d/1a/844f672dd3920fe476dce20ce8e14d50898cffe6765eae7fa234eeacb2/: black-25.1.0-cp313-cp313-win_amd64.whl
.poetry/cache/artifacts/57/10/65/9c5d6188bf3c8b11aa598716a225f4ec592dd9ea39ca2698703eb73ed1/: jupyter_console-6.6.3-py3-none-any.whl
.poetry/cache/artifacts/57/91/fa/cd16c413c4d2592ec34d16a608ab737c71e70b1248c49c5a388808cc57/: sphinxcontrib_devhelp-2.0.0-py3-none-any.whl
.poetry/cache/artifacts/5a/39/1c/647370d8fce39fbc20f693d8319c40c93a6bb4c83adcc86bce3d2c724f/: ipywidgets-8.1.7-py3-none-any.whl
.poetry/cache/artifacts/5c/a8/29/0467c70d1105c23754ca0a93e938135b38da253f014ef5f9446e5a6b31/: isort-6.0.1-py3-none-any.whl
.poetry/cache/artifacts/5c/b7/39/66c0790fabc955fc34895d7a30c41a3fb540a1c84e773bfb89b1950856/: dataclass_wizard-0.35.0-py2.py3-none-any.whl
.poetry/cache/artifacts/5d/ba/48/65768d7c9031a551e3c2a5820d8ef1d6726c4d1b09f3a038ce25b5b47a/: watchfiles-1.1.0-cp313-cp313-win_amd64.whl
.poetry/cache/artifacts/64/7e/90/3d254fc020391247d1c015d104f25720d95cd0b271b72c94470fcdd048/: furo-2024.8.6-py3-none-any.whl
.poetry/cache/artifacts/64/f8/16/28786d4e2c3f9c887c98dac4b8b8610834dd23c6d78bc45bc4786d95e0/: requirements_parser-0.13.0-py3-none-any.whl
.poetry/cache/artifacts/6c/6f/fb/13078aa81a997ba77fd010ce4cbff4d562277176d4d50dc43079e0cf70/: colorcet-3.1.0-py3-none-any.whl
.poetry/cache/artifacts/70/28/4f/da50d982b33d5ffe5f5a884a7972bc5208e15d7e48f321ea65e4a1e3bf/: dash_extensions-2.0.4-py3-none-any.whl
.poetry/cache/artifacts/70/f3/e8/a7341c6586a1ffdec8e679f90c7fc1da5a979b939e084f324d1dba2a48/: ipython-8.37.0-py3-none-any.whl
.poetry/cache/artifacts/71/70/cc/c82d085e36bd0b90c5958b0b972796a629e1906c160340b7b46dcd342d/: jenkspy-0.4.1-cp313-cp313-win_amd64.whl
.poetry/cache/artifacts/80/c5/21/23e4e8d6ed86a058f5b56fd7c5d617e36709d6c495c4ac3b608e9df40c/: sphinx_autodoc_typehints-3.2.0-py3-none-any.whl
.poetry/cache/artifacts/88/42/31/90faad17320b3efc68597a40dc75f0b49b3e9f2cfa8911e0f91befdaae/: sphinxcontrib_qthelp-2.0.0-py3-none-any.whl
.poetry/cache/artifacts/8a/f9/74/b7d92c48fc7c6872b1d5f56adac5c9a6991e1e768c8068ac62484a17cf/: jupytext-1.17.2-py3-none-any.whl
.poetry/cache/artifacts/8e/ed/48/e65a37c48eceff5ceaa44aa2a2763b9729cae4379839c91f4fde0fcd6f/: types_requests-2.32.4.20250611-py3-none-any.whl
.poetry/cache/artifacts/8f/de/10/ff008a6cf8287cd2747464c8b518d235b140c027cd729dc91f12bdc062/: jupyter-1.1.1-py2.py3-none-any.whl
.poetry/cache/artifacts/91/8a/f5/879e0b3473621b5df780389b042f05d2af2003de093216061b48321e31/: types_pytz-2025.2.0.20250516-py3-none-any.whl
.poetry/cache/artifacts/94/ac/c4/2d5e305ac1040fe50e6f0f5aefdfa34533cb742ab8e4accad0f8ebf6f6/: narwhals-1.46.0-py3-none-any.whl
cache/: cache.db-shm  cache.db-wal
src/geo_explorer/: __init__.py  file_browser.py  fs.py  geo_explorer.py  img.py  nc.py  utils.py
src/geo_explorer/assets/: copy_export.js  on_each_feature.js  stylesheet.css
tests/: test_file_browser.py  test_geo_explorer.py
(+28 files in other folders)
